# smile-gen

./: CMakeLists.txt  main.cc
lib/foreign/: CMakeLists.txt
lib/foreign/include/glad/: glad.h
lib/foreign/src/: glad.c
lib/shaders/: CMakeLists.txt  shader.hh  shader_program.hh
lib/textures/: CMakeLists.txt
resources/shaders/: light.frag  obj.frag  shader.frag  shader.vert
